Deployment config commit
