# routes/api.php
@@ -4,7 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 Route::post("/staff/login","App\Http\Controllers\Auth\LoginController@login");
-Route::post('/staff','App\Http\Controllers\v1\StaffController@store');
+Route::get("/carts", 'App\Http\Controllers\v1\CartController@index');
 
 Route::group(["prefix"=>"v1"], function(){
     Route::group(["prefix"=>"staff", "middleware"=>['assign.guard:staff','jwt.auth']], function(){
@@ -15,13 +15,13 @@ Route::group(["prefix"=>"v1"], function(){
         Route::delete("/delete/{id}",'App\Http\Controllers\v1\StaffController@delete');
         
         Route::get('/products','App\Http\Controllers\v1\ProductController@index');
-        Route::get('/product/{id}','App\Http\Controllers\v1\ProductController@index');
+        Route::get('/product/{id}','App\Http\Controllers\v1\ProductController@show');
         Route::post('/product','App\Http\Controllers\v1\ProductController@store');
         Route::post('/product/update/{id}','App\Http\Controllers\ProductController@update');
         Route::delete("/product/delete/{id}",'App\Http\Controllers\v1\ProductController@delete');
 
-        Route::get("/carts", "App\Http\Controllers\CartController@index");
-        Route::post("/cart", "App\Http\Controllers\CartController@store");
+        Route::get("/carts", 'App\Http\Controllers\v1\CartController@index');
+        Route::post("/cart", 'App\Http\Controllers\v1\CartController@store');
         Route::delete("/cart/delete/{id}", "App\Http\Controllers\CartController@delete");
 
         Route::post("/logout","App\Http\Controllers\Auth\LoginController@logout");
